# slm-ft-experiments

./: .env.example  LICENSE  PROJECT_SPEC.md  README.md  pyproject.toml  setup.py
config/: azure_foundry.yaml  kyc_sow_scenarios.yaml
docs/: KYC_SOW_GENERATOR.md
examples/: kyc_sow_example.py
kyc_sow_dataset/: test_sample.jsonl  train_sample.jsonl  val_sample.jsonl
src/azure_foundry/: client.py
src/data/generators/: __init__.py  base.py  kyc_sow_generator.py  kyc_sow_schema.py
src/data/preprocessors/: preprocessor.py
src/evaluation/: evaluator.py
src/evaluation/metrics/: base.py
src/models/: base.py
src/training/: config.py
src/training/strategies/: base.py
tests/: test_base_classes.py  test_kyc_sow_generator.py  test_project_structure.py
