[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "slm-ft-experiments"
version = "0.1.0"
description = "Initial scaffolding for SLM finetuning experiments"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "openai>=1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
